# ssl-gmmvc

./: .gitignore  README.md  demo.ipynb  main.py  pyproject.toml
common/: __init__.py  device.py
features/: __init__.py  extractor.py  matching.py
gmm/: __init__.py  backends.py  chunking.py  covariance.py  estimator.py  presets.py
src/: gmm.py
vocoder/: __init__.py  hifigan.py
